# global-mobility-analyzer

./: .gitignore  README.md  app.py  debug.py  load.py  main.py  pyproject.toml  requirements.txt  setup.py  test_db_connection.py  test_ingestion.py  upload_csv.py
dataset/: EDA_data.csv  dataset_after_feature_engineering.csv
notebook/: eda.ipynb  feature_engineering.ipynb  model.ipynb
static/: style.css
templates/: index.html
us_visa/components/: azure_data_ingestion.py  data_ingestion.py
us_visa/configuration/: azure_config.py  mysql_connection.py
us_visa/constants/: __init__.py
us_visa/entity/: config_entity.py
us_visa/exception/: __init__.py  exception.py
us_visa/logger/: __init__.py  logger.py
us_visa/pipeline/: prediction_pipeline.py  training_pipeline.py
us_visa/utils/: main_utils.py
